styles.css
.card {
    background-color: lightpink;
    border: 2px solid lightcoral;
    box-shadow: 5px 5px 15px lightcoral;
    display: grid;
    margin: 15px;
    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
    position: relative;
}


.initial {
    font-weight: bold;
    background-color: antiquewhite;
}

button {
    background-color: antiquewhite;
    margin: 15px;
    padding: 5px 15px;
    border-radius: 15px;
    border: 2px solid lightcoral;
}

.remover {
    width: 100px;
    position: absolute;
    right: 10px;
    align-self: center;
}

.reader {
    width: 100px;
    align-self: center;
}

